Add contact under galleries

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -30,6 +30,11 @@ permalink: "gallerie/{{ gallerie.label | slug }}/"
       </div>
       {% endif %}
       {%- endfor %}
+      <div class="contact">
+        Contact<br/>
+        -<br/>
+        Arnaud Roy - 06 74 57 41 73 - royarno(at)gmail(point)com
+      </div>
     </div>
   </body>
 </html>
